# console_graphic_life

./: .gitignore  CMakeLists.txt  display.cpp  display.h  life.cpp  life.h  main.cpp
bin-dbg/: console_graphics_life
cmake/Modules/: FindCDK.cmake  FindMenu.cmake
include/: display.h  life.h
src/: CMakeLists.txt  display.cpp  life.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
